# audiate

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py  speech_recognizer.py
