[tool.poetry]
name = "audiate"
version = "0.1.0"
description = ""
authors = ["d3fau1t <aciddust20@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pyaudio = "0.2.14"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "audiate"
known_third_party = ["pyaudio", "speechrecognition", "pydub"]
